tests/ui/issues/issue-14092.rs
fn fn1(0: Box) {}
//~^ ERROR missing generics for struct `Box`

fn main() {}
